--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.0.7",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
