--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^4.6.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
