--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
     "react-device-detect": "^2.2.3",
