--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@iconify/react": "^4.1.1",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.8",
     "@reduxjs/toolkit": "^1.9.5",
@@ -12,6 +13,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
+    "bootstrap-icons": "^1.11.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
     "react-device-detect": "^2.2.3",
