--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
-    "dayjs": "^1.11.9",
     "bootstrap-icons": "^1.11.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
