--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@iconify/react": "^4.1.1",
     "@material-tailwind/react": "^2.1.2",
     "@mui/icons-material": "^5.14.9",
-    "@mui/material": "^5.14.8",
-    "@mui/x-date-pickers": "^6.14.0",
+    "@mui/material": "^5.14.13",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -17,18 +15,15 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.0",
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-modern-calendar-datepicker": "^3.1.6",
     "react-kakao-maps-sdk": "^1.1.21",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
@@ -37,19 +32,7 @@
     "slick-carousel": "^1.8.1",
     "styled-component": "^2.8.0",
     "styled-components": "^6.0.7",
-    "web-vitals": "^2.1.4",
-    "workbox-background-sync": "^6.6.0",
-    "workbox-broadcast-update": "^6.6.0",
-    "workbox-cacheable-response": "^6.6.0",
-    "workbox-core": "^6.6.0",
-    "workbox-expiration": "^6.6.0",
-    "workbox-google-analytics": "^6.6.0",
-    "workbox-navigation-preload": "^6.6.0",
-    "workbox-precaching": "^6.6.0",
-    "workbox-range-requests": "^6.6.0",
-    "workbox-routing": "^6.6.0",
-    "workbox-strategies": "^6.6.0",
-    "workbox-streams": "^6.6.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
