--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.0",
+    "firebase": "^10.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
