--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.47.0",
     "react-kakao-maps-sdk": "^1.1.21",
     "react-modern-calendar-datepicker": "^3.1.6",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "sass": "^1.69.3",
     "slick-carousel": "^1.8.1",
     "styled-component": "^2.8.0",
     "styled-components": "^6.0.7",
