--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.47.0",
     "react-kakao-maps-sdk": "^1.1.21",
+    "react-modal": "^3.16.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-star-ratings": "^2.3.0",
     "sass": "^1.69.3",
     "styled-component": "^2.8.0",
     "styled-components": "^6.0.7",
